--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
-<!DOCTYPE hmtl>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>counter</title>  
-    <script src = "./stopwatch.js" defer></script>
-    <style>
-    body {
-        background-color: linen;
-      }
-      button {
-        display: flex;
-        margin: 10px auto;
-        background-color: black;
-        color: white;
-        border-radius: 10px;
-        height: 25px;
-      }
-      
-      div {
-        height: 100vh;
-        width: 100vw;
-        background-color: rgb(247, 58, 58);
-      }
-      </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stopwatch</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
- 
-    <button onclick = "stopwatch()" id="button">start</button>
-    <div id="demo"></div>
-    
+    <div class="stopwatch">
+        <div id="display">
+            <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+        </div>
+        <button id="startStopButton">Start</button>
+        <button id="resetButton">Reset</button>
+    </div>
+    <script src="stopwatch.js"></script>
 </body>
-
 </html>
